--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="./icon.png">
     <link rel="stylesheet" href="./style.css">
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+    <!-- <script src="./Quote.json"></script>  -->
 </head>
 
 <body> 
